--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,20 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" version="3.1">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+	xmlns="http://xmlns.jcp.org/xml/ns/javaee" 
+	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" 
+	version="3.1">
   <display-name>FancyHotel</display-name>
+
   <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
+	<welcome-file>/index.jsp</welcome-file>
   </welcome-file-list>
-   <servlet>
-    <servlet-name>MainPage</servlet-name>
-    <servlet-class>edu.gatech.cs4400.FancyHotel</servlet-class>
+
+  <servlet>
+  	<servlet-name>about</servlet-name>
+  	<jsp-file>/about.jsp</jsp-file>
   </servlet>
+  
   <servlet-mapping>
-    <servlet-name>MainPage</servlet-name>
-    <url-pattern>/</url-pattern>
+  	<servlet-name>about</servlet-name>
+  	<url-pattern>/about</url-pattern>
   </servlet-mapping>
+
+  <mime-mapping>
+      <extension>css</extension>
+      <mime-type>text/css</mime-type>
+  </mime-mapping>
+  <mime-mapping>
+      <extension>js</extension>
+      <mime-type>text/javascript</mime-type>
+  </mime-mapping>
 </web-app>
