--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,30 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-	xmlns="http://xmlns.jcp.org/xml/ns/javaee" 
-	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" 
-	version="3.1">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" version="3.1">
   <display-name>FancyHotel</display-name>
-
   <welcome-file-list>
-	<welcome-file>/index.jsp</welcome-file>
+    <welcome-file>/login.jsp</welcome-file>
   </welcome-file-list>
-
   <servlet>
-  	<servlet-name>about</servlet-name>
-  	<jsp-file>/about.jsp</jsp-file>
+    <servlet-name>about</servlet-name>
+    <jsp-file>/about.jsp</jsp-file>
   </servlet>
-  
   <servlet-mapping>
-  	<servlet-name>about</servlet-name>
-  	<url-pattern>/about</url-pattern>
+    <servlet-name>about</servlet-name>
+    <url-pattern>/about</url-pattern>
   </servlet-mapping>
-
+  <servlet>
+    <servlet-name>main</servlet-name>
+    <jsp-file>/main.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>main</servlet-name>
+    <url-pattern>/main</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>newUser</servlet-name>
+    <jsp-file>/register.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>newUser</servlet-name>
+    <url-pattern>/newUser</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>loginServlet</servlet-name>
+    <servlet-class>edu.gatech.cs4400.FancyHotel.Controller.LogInServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>loginServlet</servlet-name>
+    <url-pattern>/login</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>registerServlet</servlet-name>
+    <servlet-class>edu.gatech.cs4400.FancyHotel.Controller.RegisterServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>registerServlet</servlet-name>
+    <url-pattern>/register</url-pattern>
+  </servlet-mapping>
   <mime-mapping>
-      <extension>css</extension>
-      <mime-type>text/css</mime-type>
+    <extension>css</extension>
+    <mime-type>text/css</mime-type>
   </mime-mapping>
   <mime-mapping>
-      <extension>js</extension>
-      <mime-type>text/javascript</mime-type>
+    <extension>js</extension>
+    <mime-type>text/javascript</mime-type>
   </mime-mapping>
 </web-app>
