--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -37,6 +37,14 @@
     <url-pattern>/updateOne</url-pattern>
   </servlet-mapping>
   <servlet>
+    <servlet-name>updateThree</servlet-name>
+    <jsp-file>/updatethree.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>updateThree</servlet-name>
+    <url-pattern>/updateThree</url-pattern>
+  </servlet-mapping>
+  <servlet>
     <servlet-name>addCard</servlet-name>
     <jsp-file>/addcard.jsp</jsp-file>
   </servlet>
@@ -61,14 +69,6 @@
     <url-pattern>/updateTwo</url-pattern>
   </servlet-mapping>
   <servlet>
-    <servlet-name>updateThree</servlet-name>
-    <jsp-file>/updatethree.jsp</jsp-file>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>updateThree</servlet-name>
-    <url-pattern>/updateThree</url-pattern>
-  </servlet-mapping>
-  <servlet>
     <servlet-name>newUser</servlet-name>
     <jsp-file>/register.jsp</jsp-file>
   </servlet>
@@ -83,6 +83,14 @@
   <servlet-mapping>
     <servlet-name>loginServlet</servlet-name>
     <url-pattern>/login</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>UpdateServlet</servlet-name>
+    <servlet-class>edu.gatech.cs4400.FancyHotel.Controller.UpdateDateServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>UpdateServlet</servlet-name>
+    <url-pattern>/EnterDate</url-pattern>
   </servlet-mapping>
   
   <servlet>
