--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -5,13 +5,15 @@
     <welcome-file>/login.jsp</welcome-file>
   </welcome-file-list>
   <servlet>
-    <servlet-name>about</servlet-name>
+  
+  <servlet-name>about</servlet-name>
     <jsp-file>/about.jsp</jsp-file>
   </servlet>
   <servlet-mapping>
     <servlet-name>about</servlet-name>
     <url-pattern>/about</url-pattern>
   </servlet-mapping>
+  
   <servlet>
     <servlet-name>main</servlet-name>
     <jsp-file>/main.jsp</jsp-file>
@@ -20,7 +22,8 @@
     <servlet-name>main</servlet-name>
     <url-pattern>/main</url-pattern>
   </servlet-mapping>
-   <servlet>
+  
+  <servlet>
     <servlet-name>confirmation</servlet-name>
     <jsp-file>/confirmation.jsp</jsp-file>
   </servlet>
@@ -28,22 +31,16 @@
     <servlet-name>confirmation</servlet-name>
     <url-pattern>/confirmation</url-pattern>
   </servlet-mapping>
+  
   <servlet>
-    <servlet-name>updateOne</servlet-name>
+  <servlet-name>updateOne</servlet-name>
     <jsp-file>/updateone.jsp</jsp-file>
   </servlet>
   <servlet-mapping>
     <servlet-name>updateOne</servlet-name>
     <url-pattern>/updateOne</url-pattern>
   </servlet-mapping>
-  <servlet>
-    <servlet-name>updateThree</servlet-name>
-    <jsp-file>/updatethree.jsp</jsp-file>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>updateThree</servlet-name>
-    <url-pattern>/updateThree</url-pattern>
-  </servlet-mapping>
+  
   <servlet>
     <servlet-name>addCard</servlet-name>
     <jsp-file>/addcard.jsp</jsp-file>
@@ -52,6 +49,7 @@
     <servlet-name>addCard</servlet-name>
     <url-pattern>/addCard</url-pattern>
   </servlet-mapping>
+  
   <servlet>
     <servlet-name>deleteCard</servlet-name>
     <jsp-file>/deletecard.jsp</jsp-file>
@@ -60,6 +58,7 @@
     <servlet-name>deleteCard</servlet-name>
     <url-pattern>/deleteCard</url-pattern>
   </servlet-mapping>
+  
   <servlet>
     <servlet-name>updateTwo</servlet-name>
     <jsp-file>/updatetwo.jsp</jsp-file>
@@ -68,6 +67,16 @@
     <servlet-name>updateTwo</servlet-name>
     <url-pattern>/updateTwo</url-pattern>
   </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>updateThree</servlet-name>
+    <jsp-file>/updatethree.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>updateThree</servlet-name>
+    <url-pattern>/updateThree</url-pattern>
+  </servlet-mapping>
+  
   <servlet>
     <servlet-name>newUser</servlet-name>
     <jsp-file>/register.jsp</jsp-file>
@@ -76,6 +85,7 @@
     <servlet-name>newUser</servlet-name>
     <url-pattern>/newUser</url-pattern>
   </servlet-mapping>
+  
   <servlet>
     <servlet-name>loginServlet</servlet-name>
     <servlet-class>edu.gatech.cs4400.FancyHotel.Controller.LogInServlet</servlet-class>
@@ -111,6 +121,7 @@
     <url-pattern>/searchRooms</url-pattern>
   </servlet-mapping>
   
+  
   <servlet>
     <servlet-name>chooseRoomsServlet</servlet-name>
     <jsp-file>/chooseRooms.jsp</jsp-file>
@@ -128,6 +139,8 @@
     <servlet-name>searchConfirmationServlet</servlet-name>
     <url-pattern>/searchConfirmation</url-pattern>
   </servlet-mapping>
+  
+  
   <servlet>
     <servlet-name>registerServlet</servlet-name>
     <servlet-class>edu.gatech.cs4400.FancyHotel.Controller.RegisterServlet</servlet-class>
@@ -136,6 +149,7 @@
     <servlet-name>registerServlet</servlet-name>
     <url-pattern>/register</url-pattern>
   </servlet-mapping>
+  
   <servlet>
     <servlet-name>cancel</servlet-name>
     <jsp-file>/cancel.jsp</jsp-file>
@@ -163,7 +177,6 @@
     <url-pattern>/getReview</url-pattern>
   </servlet-mapping>  
   
-  
   <servlet>
     <servlet-name>giveReview</servlet-name>
     <jsp-file>/giveReview.jsp</jsp-file>
@@ -172,6 +185,27 @@
     <servlet-name>giveReview</servlet-name>
     <url-pattern>/giveReview</url-pattern>
   </servlet-mapping> 
+  
+  <servlet>
+    <servlet-name>generateReview</servlet-name>
+    <servlet-class>edu.gatech.cs4400.FancyHotel.Controller.GiveReviewServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>generateReview</servlet-name>
+    <url-pattern>/generateReview</url-pattern>
+  </servlet-mapping>  
+  
+  <servlet>
+    <servlet-name>reservationReport</servlet-name>
+    <jsp-file>/reservationReport.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>reservationReport</servlet-name>
+    <url-pattern>/reservationReport</url-pattern>
+  </servlet-mapping>
+  
+  
+    
   <mime-mapping>
     <extension>css</extension>
     <mime-type>text/css</mime-type>
